metadata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata
  namespace: ssrf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metadata
  template:
    metadata:
      labels:
        app: metadata
    spec:
      hostNetwork: true
      containers:
      - name: metadata
        image: adithyams2002/ssrf-app:latest
        command: ["python", "metadata_server.py"]
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
