services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: ssrf
spec:
  selector:
    app: app1
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: ssrf
spec:
  selector:
    app: app2
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app3
  namespace: ssrf
spec:
  selector:
    app: app3
  ports:
  - port: 8000
    targetPort: 8000
