03-allow-public-internet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-public-internet
  namespace: ssrf
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              # RFC1918 private ranges
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16

              # Link-local (IMDS)
              - 169.254.0.0/16
